Did eat logic, developed BFS algo. But some issues with predator attack logic